--- a/package.json
+++ b/package.json
@@ -1,77 +1,75 @@
 {
-  "name": "ubzilapp",
-  "version": "0.0.0",
-  "author": "ITPLUS",
-  "homepage": "http://it-plus.co",
-  "private": true,
-  "scripts": {
-    "clean": "ionic-app-scripts clean",
-    "build": "ionic-app-scripts build",
-    "lint": "ionic-app-scripts lint",
-    "ionic:build": "ionic-app-scripts build",
-    "ionic:serve": "ionic-app-scripts serve"
-  },
-  "dependencies": {
-    "@angular/animations": "4.3.5",
-    "@angular/common": "4.1.3",
-    "@angular/compiler": "4.1.3",
-    "@angular/compiler-cli": "4.1.3",
-    "@angular/core": "4.1.3",
-    "@angular/forms": "4.1.3",
-    "@angular/http": "4.1.3",
-    "@angular/platform-browser": "4.1.3",
-    "@angular/platform-browser-dynamic": "4.1.3",
-    "@ionic-native/core": "4.2.1",
-    "@ionic-native/geolocation": "4.2.1",
-    "@ionic-native/google-maps": "4.2.1",
-    "@ionic-native/native-geocoder": "4.2.1",
-    "@ionic-native/splash-screen": "4.2.1",
-    "@ionic-native/status-bar": "4.2.1",
-    "@ionic/storage": "2.0.1",
-    "cordova-android": "6.2.3",
-    "cordova-plugin-console": "1.0.5",
-    "cordova-plugin-device": "1.1.4",
-    "cordova-plugin-splashscreen": "4.0.3",
-    "cordova-plugin-statusbar": "2.2.2",
-    "cordova-plugin-whitelist": "1.3.1",
-    "cordova-sqlite-storage": "2.0.4",
-    "crypto-js": "3.1.9-1",
-    "ionic-angular": "3.6.0",
-    "ionic-plugin-keyboard": "2.2.1",
-    "ionic2-rating": "1.2.2",
-    "ionicons": "3.0.0",
-    "ng2-translate": "5.0.0",
-    "sw-toolbox": "3.4.0",
-    "rxjs": "5.4.2",
-    "zone.js": "0.8.16"
-  },
-  "devDependencies": {
-    "@ionic/app-scripts": "2.1.4",
-    "typescript": "2.4.2"
-  },
-  "cordovaPlugins": [
-    "cordova-plugin-whitelist",
-    "cordova-plugin-statusbar",
-    "cordova-plugin-console",
-    "cordova-plugin-device",
-    "cordova-plugin-splashscreen",
-    "ionic-plugin-keyboard"
-  ],
-  "cordovaPlatforms": [],
-  "description": "Ubzil Project",
-  "cordova": {
-    "plugins": {
-      "cordova-plugin-console": {},
-      "cordova-plugin-device": {},
-      "cordova-plugin-splashscreen": {},
-      "cordova-plugin-statusbar": {},
-      "cordova-plugin-whitelist": {},
-      "ionic-plugin-keyboard": {},
-      "cordova-sqlite-storage": {}
+    "name": "ubzilapp",
+    "version": "0.0.0",
+    "author": "ITPLUS",
+    "homepage": "http://it-plus.co",
+    "private": true,
+    "scripts": {
+        "clean": "ionic-app-scripts clean",
+        "build": "ionic-app-scripts build",
+        "lint": "ionic-app-scripts lint",
+        "ionic:build": "ionic-app-scripts build",
+        "ionic:serve": "ionic-app-scripts serve"
     },
-    "platforms": [
-      "android",
-      "browser"
-    ]
-  }
+    "dependencies": {
+        "@angular/animations": "4.3.5",
+        "@angular/common": "4.1.3",
+        "@angular/compiler": "4.1.3",
+        "@angular/compiler-cli": "4.1.3",
+        "@angular/core": "4.1.3",
+        "@angular/forms": "4.1.3",
+        "@angular/http": "4.1.3",
+        "@angular/platform-browser": "4.1.3",
+        "@angular/platform-browser-dynamic": "4.1.3",
+        "@ionic-native/core": "4.2.1",
+        "@ionic-native/geolocation": "4.2.1",
+        "@ionic-native/google-maps": "4.2.1",
+        "@ionic-native/native-geocoder": "4.2.1",
+        "@ionic-native/splash-screen": "4.2.1",
+        "@ionic-native/status-bar": "4.2.1",
+        "@ionic/storage": "2.0.1",
+        "cordova-plugin-console": "1.0.5",
+        "cordova-plugin-device": "1.1.4",
+        "cordova-plugin-splashscreen": "4.0.3",
+        "cordova-plugin-statusbar": "2.2.2",
+        "cordova-plugin-whitelist": "1.3.1",
+        "cordova-sqlite-storage": "2.0.4",
+        "crypto-js": "3.1.9-1",
+        "ionic-angular": "3.6.0",
+        "ionic-plugin-keyboard": "2.2.1",
+        "ionic2-rating": "1.2.2",
+        "ionicons": "3.0.0",
+        "ng2-translate": "5.0.0",
+        "sw-toolbox": "3.4.0",
+        "rxjs": "5.4.2",
+        "zone.js": "0.8.16",
+        "cordova-ios": "~4.4.0"
+    },
+    "devDependencies": {
+        "@ionic/app-scripts": "2.1.4",
+        "typescript": "2.4.2"
+    },
+    "cordovaPlugins": [
+        "cordova-plugin-whitelist",
+        "cordova-plugin-statusbar",
+        "cordova-plugin-console",
+        "cordova-plugin-device",
+        "cordova-plugin-splashscreen",
+        "ionic-plugin-keyboard"
+    ],
+    "cordovaPlatforms": [],
+    "description": "Ubzil Project",
+    "cordova": {
+        "plugins": {
+            "cordova-plugin-console": {},
+            "cordova-plugin-device": {},
+            "cordova-plugin-splashscreen": {},
+            "cordova-plugin-statusbar": {},
+            "cordova-plugin-whitelist": {},
+            "ionic-plugin-keyboard": {},
+            "cordova-sqlite-storage": {}
+        },
+        "platforms": [
+        ]
+    }
 }
