--- a/package.json
+++ b/package.json
@@ -28,24 +28,26 @@
         "@ionic-native/splash-screen": "4.2.1",
         "@ionic-native/status-bar": "4.2.1",
         "@ionic/storage": "2.0.1",
-        "cordova-plugin-console": "1.0.5",
-        "cordova-plugin-device": "1.1.4",
-        "cordova-plugin-splashscreen": "4.0.3",
-        "cordova-plugin-statusbar": "2.2.2",
-        "cordova-plugin-whitelist": "1.3.1",
-        "cordova-sqlite-storage": "2.0.4",
+        "cordova-android": "^6.2.3",
+        "cordova-ios": "^4.4.0",
+        "cordova-plugin-console": "^1.0.5",
+        "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-splashscreen": "^4.0.3",
+        "cordova-plugin-statusbar": "^2.2.2",
+        "cordova-plugin-whitelist": "^1.3.1",
+        "cordova-sqlite-storage": "^2.0.4",
         "crypto-js": "3.1.9-1",
         "ionic-angular": "3.6.0",
-        "ionic-plugin-keyboard": "2.2.1",
+        "ionic-plugin-keyboard": "^2.2.1",
         "ionic2-rating": "1.2.2",
         "ionicons": "3.0.0",
         "ng2-translate": "5.0.0",
-        "sw-toolbox": "3.4.0",
         "rxjs": "5.4.2",
-        "zone.js": "0.8.16",
-        "cordova-ios": "~4.4.0"
+        "sw-toolbox": "3.4.0",
+        "zone.js": "0.8.16"
     },
     "devDependencies": {
+        "@angular/tsc-wrapped": "^4.4.3",
         "@ionic/app-scripts": "2.1.4",
         "typescript": "2.4.2"
     },
@@ -70,6 +72,7 @@
             "cordova-sqlite-storage": {}
         },
         "platforms": [
+            "android"
         ]
     }
 }
