--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "@ionic-native/geolocation": "4.2.1",
         "@ionic-native/google-maps": "4.2.1",
         "@ionic-native/native-geocoder": "4.2.1",
+        "@ionic-native/network": "^4.2.1",
+        "@ionic-native/push": "^4.2.1",
         "@ionic-native/splash-screen": "4.2.1",
         "@ionic-native/status-bar": "4.2.1",
         "@ionic/storage": "2.0.1",
@@ -32,6 +34,8 @@
         "cordova-ios": "^4.4.0",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-network-information": "^1.3.3",
+        "cordova-plugin-push": "0.0.1",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-statusbar": "^2.2.2",
         "cordova-plugin-whitelist": "^1.3.1",
@@ -42,6 +46,7 @@
         "ionic2-rating": "1.2.2",
         "ionicons": "3.0.0",
         "ng2-translate": "5.0.0",
+        "phonegap-plugin-push": "^2.0.0",
         "rxjs": "5.4.2",
         "sw-toolbox": "3.4.0",
         "zone.js": "0.8.16"
@@ -69,7 +74,11 @@
             "cordova-plugin-statusbar": {},
             "cordova-plugin-whitelist": {},
             "ionic-plugin-keyboard": {},
-            "cordova-sqlite-storage": {}
+            "cordova-sqlite-storage": {},
+            "cordova-plugin-network-information": {},
+            "phonegap-plugin-push": {
+                "SENDER_ID": "65467897"
+            }
         },
         "platforms": [
             "android"
