add some style fix and user provider to login page

--- a/package.json
+++ b/package.json
@@ -80,8 +80,6 @@
                 "SENDER_ID": "65467897"
             }
         },
-        "platforms": [
-            "android"
-        ]
+        "platforms": []
     }
 }
