--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "build": "ionic-app-scripts build",
         "lint": "ionic-app-scripts lint",
         "ionic:build": "ionic-app-scripts build",
-        "ionic:serve": "ionic-app-scripts serve"
+        "ionic:serve": "ionic-app-scripts serve",
+        "ionic:serve:lab": "ionic-app-scripts serve --lab"
     },
     "dependencies": {
         "@angular/animations": "4.3.5",
@@ -21,6 +22,7 @@
         "@angular/http": "4.1.3",
         "@angular/platform-browser": "4.1.3",
         "@angular/platform-browser-dynamic": "4.1.3",
+        "@ionic-native/camera": "^4.2.1",
         "@ionic-native/core": "4.2.1",
         "@ionic-native/geolocation": "4.2.1",
         "@ionic-native/google-maps": "4.2.1",
@@ -31,7 +33,10 @@
         "@ionic-native/status-bar": "4.2.1",
         "@ionic/storage": "^2.0.1",
         "cordova-android": "^6.2.3",
+        "cordova-browser": "^4.1.0",
         "cordova-ios": "^4.4.0",
+        "cordova-plugin-camera": "^2.4.1",
+        "cordova-plugin-compat": "^1.1.0",
         "cordova-plugin-console": "^1.0.5",
         "cordova-plugin-device": "^1.1.4",
         "cordova-plugin-network-information": "^1.3.3",
@@ -78,8 +83,11 @@
             "cordova-plugin-network-information": {},
             "phonegap-plugin-push": {
                 "SENDER_ID": "65467897"
-            }
+            },
+            "cordova-plugin-camera": {}
         },
-        "platforms": []
+        "platforms": [
+            "browser"
+        ]
     }
 }
